# zencan

./: .gitignore  AGENTS.md  Cargo.toml  README.md  rust-toolchain.toml
.github/workflows/: rust.yml
examples/: AGENTS.md
examples/esp-node/: AGENTS.md  Cargo.toml  README.md  build.rs  rust-toolchain.toml  zencan_config.toml
examples/esp-node/.cargo/: config.toml
examples/esp-node/src/: main.rs
examples/socketcan_node/: AGENTS.md  Cargo.toml  example_pdo_config.toml
examples/socketcan_node/src/: main.rs
examples/stm32g0-lilos-node/: AGENTS.md  Cargo.toml  Embed.toml  README.md  memory.x  rust-toolchain.toml  zencan_config.toml
examples/stm32g0-lilos-node/.cargo/: config.toml
examples/stm32g0-lilos-node/src/: adc.rs  flash.rs  gpio.rs  main.rs  persist.rs
integration_tests/: AGENTS.md  Cargo.toml
integration_tests/device_configs/: example1.toml  example2_bootloader_app.toml  example3_bootloader.toml
integration_tests/src/: lib.rs  sim_bus.rs  utils.rs
integration_tests/tests/: bootloader_test.rs  codegen_tests.rs  lss_test.rs  nmt_test.rs  node_test.rs  object_flags_test.rs  pdo_tests.rs  sdo_test.rs
zencan-build/: AGENTS.md  Cargo.toml
zencan-build/src/: codegen.rs  lib.rs
zencan-build/tests/: example.eds
zencan-cli/: AGENTS.md  CHANGELOG.md  Cargo.toml
zencan-cli/src/: command.rs
zencan-client/: AGENTS.md  CHANGELOG.md  Cargo.toml  README.md
zencan-client/src/: lib.rs  nmt_master.rs  node_configuration.rs  sdo_client.rs
zencan-client/src/bus_manager/: bus_manager.rs  shared_receiver.rs  shared_sender.rs
zencan-common/: AGENTS.md  Cargo.toml
zencan-common/src/: constants.rs  device_config.rs  lib.rs  lss.rs  messages.rs  nmt.rs  node_configuration.rs  node_id.rs  objects.rs  pdo.rs  sdo.rs  socketcan.rs  time_types.rs  traits.rs
zencan-common/tests/: test_device_config_load.rs
zencan-eds/: AGENTS.md  Cargo.toml
zencan-eds/src/: example.eds  lib.rs
zencan-macro/: AGENTS.md  Cargo.toml
zencan-node/: AGENTS.md  CHANGELOG.md  Cargo.toml  README.md
zencan-node/src/: bootloader.rs  lib.rs  node.rs  node_mbox.rs  node_state.rs  pdo.rs  persist.rs  priority_queue.rs  storage.rs
zencan-node/src/object_dict/: objects.rs  sub_objects.rs
zencan-node/src/sdo_server/: mod.rs  sdo_comms.rs  sdo_server.rs
