[package]
name = "integration_tests"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Local
zencan-common.workspace = true
zencan-node.workspace = true
zencan-client.workspace = true

# External
critical-section = { version = "1.2.0", features = ["std"] }
embedded-io.workspace = true
futures.workspace = true
tokio = { version = "1.44.2", features = ["rt", "macros", "time", "sync"] }
rand = "0.9.2"

[dev-dependencies]
assertables = "9.8.1"
env_logger = "0.11.8"
serial_test = "3.2.0"

[build-dependencies]
zencan-build.workspace = true
