[package]
name = "zencan-client"
version = "0.0.3"
authors = ["Jeff McBride <jeff@jeffmcbride.net>"]
description = "Library for communicating with CANOpen devices on a CAN bus"
keywords = ["embedded", "CAN", "CANOpen"]

edition.workspace = true
license.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Internal
zencan-common = { workspace = true, default-features = false, features = ["log", "std"] }

# External
crc16.workspace = true
futures = {workspace = true, features = ["std"]}
log = { workspace = true, optional = true }
snafu.workspace = true
tokio = { version = "1.45.0", features = [
    "net",
    "time",
    "sync",
    "rt-multi-thread",
    "macros",
] }
toml = "0.8.22"
serde = { version = "1.0.219", features = ["derive"] }
tokio-util = "0.7.16"
paste = "1.0.15"

[target.'cfg(target_os = "linux")'.dependencies]
socketcan.workspace = true
zencan-common = { workspace = true, features = ["socketcan"] }

[dev-dependencies]
assertables = "9.8.2"

[features]
default = ["log"]
socketcan = ["zencan-common/socketcan"]

# docs.rs-specific configuration
[package.metadata.docs.rs]
# defines the configuration attribute `docsrs`
rustdoc-args = ["--cfg", "docsrs"]
