[package]
name         = "esp-node"
publish      = false
edition      = "2021"

# Don't include this project in the workspace above it
[workspace]

[dependencies]
# Local
zencan-node = { path = "../../zencan-node", default-features = false, features = ["log"] }

# External
critical-section = "1.2.0"
static_cell = "2.1.1"
esp-bootloader-esp-idf = { version = "0.2.0", features = ["esp32c3"] }
esp-hal                = { version = "=1.0.0-rc.0", features = ["esp32c3", "unstable"] }
esp-backtrace = { version = "0.17.0", features = [
  "exception-handler",
  "panic-handler",
  "println",
  "esp32c3",
] }
esp-println = { version = "0.15.0", features = ["log-04", "esp32c3"] }
esp-hal-embassy = { version = "0.9.0", features = ["esp32c3"] }
embassy-executor = { version = "0.7.0", features = ["task-arena-size-20480"] }
embassy-time = "0.4.0"
embassy-sync = "0.7.1"
embassy-futures = "0.1.1"
embedded-can = "0.4.1"
log = "0.4.27"
nb = "1.1.0"

[build-dependencies]
zencan-build = { path = "../../zencan-build" }

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units    = 1     # LLVM can perform better optimizations using a single thread
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 's'
overflow-checks  = false
